[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
hyle_contract = { git = "https://github.com/hyle-org/hyle-risc-zero-verifier.git", branch = "main" }
methods = { path = "../methods" }
risc0-zkvm = { version = "0.21.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0.111"
base64 = "0.22.1"